# excelmanus

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyright-baseline.json  Dockerfile  LICENSE  NOTICE  README.md  README_EN.md  README_文档清理快速判断指南.md  RELEASE_v1.6.1.md  RELEASE_v1.6.5.md  RELEASE_v1.6.7.md  RELEASE_v1.6.8.md  RELEASE_v1.7.0.md  RELEASE_v1.7.1.md  deploy.sh  docker-compose.yml  excelmanus_tg_bot.py  filter_script.py  id_new_server.pem.pub  plan.md  pyproject.toml  pyrightconfig.json  server.crt  server.key  true_example.md  tunnel_gui.py  updateplan.md  一键部署.bat
.claude/: settings.json
.clawhub/: lock.json
.github/workflows/: docker-multiarch.yml  python-ci.yml  secret-scan.yml  security-secrets.yml
.kiro/hooks/: code-review-bugs.kiro.hook
.kiro/steering/: environment.md  product.md  structure.md  tech.md
.tmp/: cli_test_tasks.md  gen_welcome_event.py  test_embedding_e2e.py
.windsurf/rules/: enviroment.md
bench/: README.md  analyze_3way.py  bench_inspect.py  bench_pick.py  run_3way_ab.sh
bench/cases/: suite_01_基础读取类.json  suite_02_数据分析类.json  suite_03_格式化与样式类.json  suite_04_图表生成类.json  suite_05_公式与计算类.json  (+35 more)
deploy/: .env.deploy.example  Dockerfile  Dockerfile.sandbox  EmbeddedAssets.cs  ExcelManusSetup.cs  _fix_frontend.sh  build_exe.bat  build_multiarch.bat  build_multiarch.sh  build_setup.bat  buildkitd.toml  deploy.ps1  deploy.sh  docker-compose.yml  embed_static.py  nginx.conf  requirements-setup.txt  setup_app.py  start.bat  start.ps1  start.sh  update.bat  update.ps1  update.sh  windows_deploy_gui.py
docs/: agent-architecture-review.md  configuration.md  configuration_en.md  embedding_research_report.md  file_awareness_analysis.md  hot-update-design.md  impl-chitchat-routing.md  impl-llm-tool-routing.md  ops-manual.md  ops-manual_en.md  privacy-policy.md  research_openclaw_prompt_engineering.md  review_checklist.md  skill-isolation-design.md  skillpack_protocol.md  skillpack_protocol_en.md  terms-of-service.md  word-agent-dispatch-prompts.md  word-backend-upgrade-plan.md
excelmanus/: __init__.py  __main__.py  api.py  api_routes_mcp.py  api_routes_rules.py  api_routes_version.py  api_sse.py  approval.py  backup.py  bench.py  bench_reporter.py  bench_validator.py  capability_probe_jobs.py  chat_history.py  cli.py  cli_dashboard.py  cli_errors.py  compaction.py  config.py  config_transfer.py  context_budget.py  control_commands.py  conversation_persistence.py  cv_analyzer.py  data_home.py  database.py  db_adapter.py  engine.py  engine_types.py  engine_utils.py  error_guidance.py  events.py  excel_extensions.py  file_registry.py  file_versions.py  format_utils.py  interaction.py  logger.py  mcp_server.py  memory.py  (+33 more)
excelmanus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
jobs/: city_sales_by_city.py
scripts/: __init__.py  bench_inspect.py  bench_phase2_ab.py  bench_pick.py  bench_router.py  create_excel.py  dump_agent_prompt.py  dump_api_request.py  dump_token_budget.py  generate_stress_test_excel.py  migrate_skills_to_standard.py  ssh_tunnel_manager.py  test_small_model_latency.py
test_report/: Phase2_Window_Perception_Benchmark.md  SpreadsheetBench_Verified20_20260215.md  Window Perception Optimization.md
tests/: conftest.py  test_account_merge.py  test_advanced_format_tools.py  test_api.py  test_api_operations.py  test_api_orjson_fallback.py  test_approval.py  test_approval_store.py  test_audit_l2_fixes.py  test_auth_admin_usage.py  test_auth_providers.py  test_aux_config_broadcast.py  test_backup.py  test_bench.py  test_bench_reporter.py  test_bench_validator.py  test_bot_error_guidance.py  test_bot_ux_optimization.py  test_cache_optimization.py  test_capability_map.py  test_cell_tools.py  test_channel_config_store.py  test_channel_profile.py  test_channel_rate_limit.py  test_channel_settings.py  test_channels.py  test_channels_staged.py  test_chart_skill.py  test_chat_history.py  test_checkpoint_mode.py  test_chunking_and_output.py  test_claude_provider.py  test_clawhub.py  test_cli.py  test_cli_approval.py  test_cli_commands.py  test_cli_dashboard.py  test_cli_errors.py  test_cli_help.py  test_cli_prompt.py  (+271 more)
web/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
(+663 files in other folders)
